# alma-item-checks-webhook-service

./: .gitignore  .pre-commit-config.yaml  README.md  function_app.py  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: build-deploy.yml  deploy.yml  poetry-update.yml  promote-to-production.yml  promote.yml  terraform.yml
alembic/versions/: 057797f52e46_initial_schema.py
alma_item_checks_webhook_service/: config.py  database.py
alma_item_checks_webhook_service/blueprints/: bp_retrieve_item_data.py  bp_webhook.py
alma_item_checks_webhook_service/models/: __init__.py  institution.py
alma_item_checks_webhook_service/repos/: institution_repo.py
alma_item_checks_webhook_service/services/: data_service.py  institution_service.py  retrieve_item_data_service.py  storage_service.py  webhook_service.py
alma_item_checks_webhook_service/utils/: security.py
terraform/: .terraform.lock.hcl  backend.hcl  database.tf  function_app.tf  main.tf  outputs.tf  providers.tf  storage.tf  terraform.tplan  tfplan  variables.tf
terraform/scripts/: get_storage_names.py
tests/: conftest.py  test_config.py  test_database.py
tests/blueprints/: test_bp_retrieve_item_data.py  test_bp_webhook.py
tests/models/: test_base.py  test_institution.py
tests/repos/: test_institution_repo.py
tests/services/: test_data_service.py  test_institution_service.py  test_retrieve_item_data_service.py  test_storage_service.py  test_webhook_service.py
tests/utils/: test_security.py
